# Inf_LangGraph

./: .gitignore  Basic.ipynb  Edge.ipynb  Graph_Node.ipynb  LangChain_basic.ipynb  LangGraph_Conditional_Edge.ipynb  LangGraph_Edge.ipynb  Multi_Graph_Node.ipynb  RAG.ipynb  RAG_with_langchain.ipynb  ReAct_Agent.ipynb  Real_Estate_Tax.ipynb  Search_RAG.ipynb  Self_RAG.ipynb  Tool_Basic.ipynb  Tool_Graph.ipynb  Tool_History.ipynb  Tool_Human_Interupt.ipynb  Tool_Interaction.ipynb  embedding.ipynb  fewshot.py  income_tax_graph.py  mcp_server.py  pyproject.toml  real_estate_tax_graph.py  requirements.txt  streamable HTTP_and_Stdio.ipynb  tax.docx  tax_chatbot.py  tax_llm.py
LangChain/: RAG_with_pinecone.ipynb  evaluate.ipynb  tax_chatbot.py
LangChain_RAG/: RAG_with_chroma.ipynb  RAG_without_langchain.ipynb  tax_llm.py
documents/: income_tax.md  income_tax.txt  real_estate_tax.md  real_estate_tax.txt
n8n/: email_bot.py  main.py
real_estate_tax_collection/: chroma.sqlite3
